# expertSystem

./: .gitignore  CMakeLists.txt  Makefile  a.out  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9_error.txt  testNPI.txt
headers/: Fact.class.hpp  FactBase.class.hpp  Graph.class.hpp  IObject.hpp  Lexer.class.hpp  Motor.class.hpp  Node.class.hpp  Operand.class.hpp  Operator.class.hpp  ParsedNode.class.hpp  Parser.class.hpp  Rule.class.hpp  RuleBase.class.hpp
srcs/: Fact.class.cpp  FactBase.class.cpp  Graph.class.cpp  Lexer.class.cpp  Motor.class.cpp  Node.class.cpp  Operand.class.cpp  Operator.class.cpp  ParsedNode.class.cpp  Parser.class.cpp  Rule.class.cpp  RuleBase.class.cpp  main.cpp  test_graph.cpp
